ontol/ontol-compiler/test-cases/error/rel/needs_a_triple.on
def a (
    rel 'b': i64 // ERROR parse error: expected relation type, found `:`
)
